--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "axios": "^0.21.1",
@@ -33,6 +34,8 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-skeleton-content": "^1.0.20",
+    "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
